Correcting issue that prevented border radius from working on class header_search.  Added overflow: hidden.

--- a/src/Header.css
+++ b/src/Header.css
@@ -19,8 +19,8 @@
     display: flex;
     flex: 1;
     align-items: center;
-    border-radius: 24px;
-
+    border-radius: 4px;
+    overflow: hidden;
 }
 
 .header_searchInput {
